Removed compiled main.css, updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# compiled files
+
+main.css
+*.map
+
+# temporary files
+
 .sass-cache
-wikistatic/ffks/css/main.css.map
+*.bak
 *.swp
 *.swo
-.*.swp
-.*.swo
+*~
